# Deditor

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: build-mac.sh  build-win.ps1  clean.ps1  clean.sh  start.ps1  start.sh  test-xmind.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ActivityBar.tsx  BranchPopover.tsx  CloneRepoDialog.tsx  CommandPalette.tsx  CommitPanel.tsx  ConfirmDialog.tsx  ConflictResolutionDialog.tsx  ContextMenu.tsx  DiffView.tsx  Editor.tsx  EditorHost.tsx  FileTree.tsx  FindInFiles.tsx  GotoAnything.tsx  GotoSymbol.tsx  InitRepoDialog.tsx  JsonToolbar.tsx  LangIcon.tsx  LogPanel.tsx  ManageRemotesDialog.tsx  MarkdownToolbar.tsx  Modal.tsx  PatchDialog.tsx  Preview.tsx  PromptDialog.tsx  PushDialog.tsx  ResetHeadDialog.tsx  SettingsDialog.tsx  StashDialog.tsx  StatusBar.tsx  TabBar.tsx  TagsDialog.tsx  Terminal.tsx  TitleBar.tsx  XmindCanvas.tsx  XmindView.tsx
src/components/ui/: Button.tsx
src/lib/: bookmarks.ts  codeBlockComplete.ts  colorPreview.ts  commands.ts  diff.ts  editorBridge.ts  export.ts  fileWatch.ts  fileio.ts  format.ts  fuzzy.ts  git.ts  gitMenu.ts  highlight.ts  i18n.ts  inspectionMarkers.ts  islandDarkTheme.ts  islandLightTheme.ts  jsonFormat.ts  lang.ts  localImgHydrate.ts  logger.ts  markdown.ts  markdownTable.ts  mermaidHydrate.ts  pathUtil.ts  persistence.ts  plantumlHydrate.ts  scrollSync.ts  shikiWorker.ts  shortcuts.ts  statusInfo.ts  symbols.ts  terminalBus.ts  treeRefresh.ts  vcsGutter.ts
src/lib/xmind/: edit.ts  layout.ts  parse.ts
src/store/: editor.ts
src/types/: shims.d.ts
