[package]
name = "deditor"
version = "0.7.0"
description = "DEditor - Markdown and multi-language code editor"
authors = ["DEditor"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
base64 = "0.22"
# Cross-platform PTY backend for the integrated terminal. Wezterm's portable-pty
# wraps openpty / ConPTY so the same code path works on macOS, Linux, Windows.
portable-pty = "0.8"
# UUID for per-terminal session ids passed across the IPC bridge.
uuid = { version = "1", features = ["v4"] }

# macOS-only: used to strip AppKit's auto-injected Edit-menu items
# ("Start Dictation…", "Emoji & Symbols", "AutoFill", Speech submenu, …)
# that bypass our localized labels and stay in the system locale.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
